[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycasa"
version = "0.0.1"
description = "Minimal manual rebuild of pycasa focused on io first"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "opencv-contrib-python>=4.10,<5",
  "tqdm>=4.66,<5",
]

[project.optional-dependencies]
io = [
  "opencv-contrib-python>=4.10,<5",
  "huggingface_hub>=0.26,<2",
]
detection = [
  "scikit-image>=0.25,<0.27",
  "scipy>=1.13,<2",
]
tracking = [
  "scipy>=1.13,<2",
]
yolo = [
  "opencv-contrib-python>=4.10,<5",
  "matplotlib>=3.8,<4",
  "pandas>=2.2,<3",
  "pillow>=10,<12",
  "psutil>=6,<7",
  "PyYAML>=6,<7",
  "requests>=2.31,<3",
  "torch>=2.4,<2.7",
  "torchvision>=0.19,<0.22",
  "tqdm>=4.66,<5",
  "packaging>=24,<26",
  "ultralytics>=8.3",
  "huggingface_hub>=0.26,<2",
]
progress = [
  "tqdm>=4.66,<5",
]
dev = [
  "pytest>=8,<9",
]
docs = [
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.5,<10",
  "mkdocstrings[python]>=0.26,<1",
  "black>=24,<26",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pycasa*"]
